fix(Sidenav): :bug: Fix toggle sidenav on mobile devices
Fix toggle sidenav on mobile devices by handling it with a state instead of a service. Add styles for landscape mode on tablets and mobiles. Update of some eslint rules.

--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -47,13 +47,13 @@
 }
 
 @include media-queries('large') {
-    .container .sidenav {
-        width: 25%;
+    .container .sidenav .categories button {
+        font-size: $font-size-big;
     }
 }
 
 @include media-queries('huge') {
     .container .sidenav {
-        width: 20%;
+        width: 25%;
     }
 }
