--- a/src/scss/utilities/variables.scss
+++ b/src/scss/utilities/variables.scss
@@ -12,6 +12,7 @@ $font-family: 'Raleway', sans-serif !default;
 $font-size-default: 1rem !default;
 $font-size-medium: 1.75rem !default;
 $font-size-big: 2.5rem !default;
+$font-size-very-big: 3.25rem !default;
 
 // Weights
 $font-weight-normal: 400 !default;
